[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
polars = { version = "0.51.0", features = [
  "lazy",           # required to use Expr / col()
  "ndarray",        # if you convert to/from ndarray
  "temporal",       # date/time support if needed
  "rolling_window", # <-- enables Expr.rolling_* APIs
  "rolling_window_by",
  "pct_change",
] }
ndarray = "0.16"
smartcore = "0.4.2"